--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon --ignore \"./data\" server.js"
+        "start": "node server.js",
+        "start-nodemon": "nodemon --ignore \"./data\" server.js"
     },
     "author": "",
     "license": "ISC",
