--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
-    "name": "server",
+    "name": "mister-toy",
     "version": "1.0.0",
+    "engines": {
+        "node": "12.x",
+        "npm": "6.x"
+    },
     "description": "production ready server",
     "main": "server.js",
     "scripts": {
@@ -9,7 +13,7 @@
         "start": "node server.js",
         "start-nodemon": "nodemon server.js"
     },
-    "author": "moshe pinhasi",
+    "author": "eyal barkai",
     "license": "ISC",
     "dependencies": {
         "bcrypt": "^3.0.6",
