--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "server:dev": "NODE_ENV=development nodemon app.js",
         "server:prod": "node app.js",
         "start": "node server.js",
-        "start-nodemon": "nodemon server.js"
+        "start-nodemon": "nodemon server.js",
+        "heroku-postbuild": "npm run build"
     },
     "author": "eyal barkai",
     "license": "ISC",
